# mime

./: .gitignore  MIME_pipeline_README.md  README.md  aggregate.py  commands.sh  pyproject.toml  run_eval.sh
bash_scripts/: check_png.sh  check_video_correct.sh  commands.sh  correct_naming.sh  create_image_equivalent.sh  create_paper_figure.sh  create_videos_from_frames.sh  submit_render_job.sh
blender_scripts/: create_blender.py  find_start_end_frames.py  install_addons.py  overlay_video_on_background.py  rotate_camera.py  set_render_configs.py  video2image.py
data/: consolidate_labels.py  consolidated_data.jsonl  data_combined_legacy.jsonl  initial_annotations.jsonl  mime_data_legacy.jsonl  real_data_legacy.jsonl
results/mime-cropped/: human_eval.jsonl  human_eval_similarities_cache.json
results/mime-cropped/cot/all/: analyze_failures.py  process_mcq.py  raw_ff_gemini_gemini-1.5-flash.json  raw_ff_internvl2_5_OpenGVLab_InternVL2_5-8B.json  raw_ff_openai_gpt-4o-mini.json  raw_ff_phi35_microsoft_Phi-3.5-vision-instruct.json  raw_ff_qwen25vl_Qwen_Qwen2.5-VL-3B-Instruct.json  raw_ff_qwen25vl_Qwen_Qwen2.5-VL-7B-Instruct.json  raw_ff_qwen2vl_Qwen_Qwen2-VL-7B-Instruct.json  raw_mcq_gemini_gemini-1.5-flash.json  raw_mcq_internvl2_5_OpenGVLab_InternVL2_5-8B.json  raw_mcq_openai_gpt-4o-mini.json  raw_mcq_phi35_microsoft_Phi-3.5-vision-instruct.json  raw_mcq_qwen25vl_Qwen_Qwen2.5-VL-3B-Instruct.json  raw_mcq_qwen25vl_Qwen_Qwen2.5-VL-7B-Instruct.json  raw_mcq_qwen2vl_Qwen_Qwen2-VL-7B-Instruct.json  score_ff_gemini_gemini-1.5-flash.csv  score_ff_internvl2_5_OpenGVLab_InternVL2_5-8B.csv  score_ff_openai_gpt-4o-mini.csv  score_ff_phi35_microsoft_Phi-3.5-vision-instruct.csv  score_ff_qwen25vl_Qwen_Qwen2.5-VL-3B-Instruct.csv  score_ff_qwen25vl_Qwen_Qwen2.5-VL-7B-Instruct.csv  score_ff_qwen2vl_Qwen_Qwen2-VL-7B-Instruct.csv  score_mcq_gemini_gemini-1.5-flash.csv  score_mcq_internvl2_5_OpenGVLab_InternVL2_5-8B.csv  score_mcq_openai_gpt-4o-mini.csv  score_mcq_phi35_microsoft_Phi-3.5-vision-instruct.csv  score_mcq_qwen25vl_Qwen_Qwen2.5-VL-3B-Instruct.csv  score_mcq_qwen25vl_Qwen_Qwen2.5-VL-7B-Instruct.csv  score_mcq_qwen2vl_Qwen_Qwen2-VL-7B-Instruct.csv
results/mime-cropped/few-shot/all/: score_ff_gemini-few-shot.csv  score_ff_openai-few-shot.csv  score_mcq_gemini-few-shot.csv  score_mcq_openai-few-shot.csv  video-gemini-few-shot-free-final.json  video-gemini-few-shot-mcq-final.json  video-openai-few-shot-free-final.json  video-openai-few-shot-mcq-final.json
results/mime-real-resized/: anonymize.py  human_eval.jsonl  human_eval_similarities_cache.json
src/MimeEval/: cli.py
src/MimeEval/models/: __init__.py  fewshotutils.py  gemini.py  internvl2_5.py  janus_model.py  openai_model.py  phi35.py  qwen25vl.py  qwen2vl.py  vlms.py
src/MimeEval/run/: mimevideo_freeform.py  mimevideo_mcq.py  score_outputs.py
src/MimeEval/utils/: compute_human_eval_results.py  constants.py  create_data_jsonl.py  crop_videos.py  download_videos.py  make_huggingface_dataset.py  resize_videos.py  retry.py  split_data.py
(+52 files in other folders)
